<resources>
    <string name="app_name">Tenant</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="str_number_or_email">Number or Email</string>
    <string name="str_name">Name</string>
    <string name="str_don_t_have_an_account">Don’t have an account?</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_i_didn_t_receive_a_code">I didn’t receive a code</string>
    <string name="str_resend">Resend</string>
    <string name="str_verify">Verify</string>
    <string name="str_we_ve_sent_an_sms_with_an_activation_n_code_to_your_phone_number_ending_with_n_290_enter_the_code_below">We’ve sent an SMS with an activation \n code to your phone number ending with \n </string>
    <string name="str_enter_the_code_below">Enter the Code below</string>
    <string name="str_verify_your_phone_number">Verify your phone number</string>
    <string name="str_phone_number">***290.</string>
    <string name="str_congratulations_you_have_been_successfully_authenticated">Congratulations! You have been \n successfully authenticated</string>
    <string name="str_success">Success!</string>
    <string name="str_welcome">Welcome</string>
    <string name="maintenance_and_service_provider">Maintenance And Service Provider</string>
    <string name="str_continue">Continue</string>
    <string name="str_service_provider">Service Provider</string>
    <string name="str_maintenance_company">Maintenance Company</string>
    <string name="str_owner_and_tenant_both">Owner and Tenant Both</string>
    <string name="str_owner">Owner</string>
    <string name="str_please_choose_one_to_continue">Please choose one to continue</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_already_a_registered_user">Already a Registered User?</string>


    <string name="str_name_required">name Required</string>
    <string name="str_contact_number_required">contact Number Required</string>
    <string name="str_provide_valid_email">email Required</string>
    <string name="str_tenants_registration_process">Tenants Registration Process</string>
    <string name="str_select_the_flat_from_options_below">Select the flat from options below</string>
    <string name="str_building_name">Building Name</string>
    <string name="str_you_are_now_registered_as_tenant_for_property">You are now registered as tenant \n for property:</string>
    <string name="str_building_number">Building Number</string>
    <string name="str_flat_number">Flat Number</string>
    <string name="str_owner_name">Owner Name</string>
    <string name="str_done">DONE</string>
    <string name="str_flat_number_3976">3976</string>
    <string name="str_job_1218923">Job - 1218923</string>
    <string name="str_fan_repair_works_at_lounge">Fan Repair Works at lounge</string>
    <string name="str_approval_pending">Approval Pending</string>
    <string name="str_show_details">Show Details</string>
    <string name="str_february_18">February 18</string>
    <string name="str_post_a_new_job">Post a New Job</string>
    <string name="str_post_new_job">Post a New Job</string>
    <string name="str_in_progress">In Progress</string>
    <string name="str_completed">Completed</string>
    <string name="str_register_yourself_now_to_enjoy_our_services">Register yourself now to enjoy our services!</string>

    <string-array name="flats_array">
        <item>Flat F1001</item>
        <item>Flat F1002</item>
        <item>Flat F1003</item>
        <item>Flat F1004</item>
        <!-- Add more items as needed -->
    </string-array>
</resources>