<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="fragment.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- Wave shape at the top -->
        <FrameLayout
            android:id="@+id/wave_top"
            android:layout_width="0dp"
            android:layout_height="@dimen/_140sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_welcome_bg" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_texturee" />
        </FrameLayout>

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/outfit_semibold"
            android:text="@string/str_sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/_26ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wave_top" />

        <View
            android:id="@+id/underline"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="@+id/signup_tv"
            app:layout_constraintTop_toBottomOf="@+id/signup_tv" />


        <TextView
            android:id="@+id/chose_one_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:fontFamily="@font/outfit_medium"
            android:text="@string/str_please_choose_one_to_continue"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/underline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/owner_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_22sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/str_owner"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chose_one_tv"
            app:layout_constraintWidth_percent="0.9" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tenant_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_tv"
            app:layout_constraintWidth_percent="0.9" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/owner_and_tenant_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/str_owner_and_tenant_both"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tenant_tv"
            app:layout_constraintWidth_percent="0.9" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mantinance_company_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/str_maintenance_company"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_and_tenant_tv"
            app:layout_constraintWidth_percent="0.9" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/service_provider_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="5sp"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/str_service_provider"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mantinance_company_tv"
            app:layout_constraintWidth_percent="0.9" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_worker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/silver_round_shape"
            android:fontFamily="@font/outfit_regular"
            android:paddingVertical="@dimen/_5sdp"
            android:paddingStart="@dimen/_10sdp"
            android:text="Worker"
            android:textColor="@color/gray"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/service_provider_tv"
            app:layout_constraintWidth_percent="0.9" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/blue"
            android:text="@string/str_continue"
            android:textSize="@dimen/_16ssp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_worker"
            app:layout_constraintWidth_percent="0.8" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>