<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    app:cardCornerRadius="@dimen/_12sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="?android:attr/selectableItemBackground">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:backgroundTint="@color/black"
            android:focusable="true"
            android:textAlignment="center"
            android:fontFamily="@font/outfit_semibold"
            android:padding="@dimen/_4sdp"
            android:text="@string/str_job_1218923"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/str_february_18"
            android:textSize="@dimen/_12ssp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintTop_margin="8dp"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/outfit_medium"
            android:text="@string/str_fan_repair_works_at_lounge"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_approval"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_approval"
            app:layout_constraintBottom_toBottomOf="@+id/jobStatus"
            app:layout_constraintEnd_toStartOf="@+id/jobStatus"
            app:layout_constraintStart_toStartOf="@+id/jobDescription"
            app:layout_constraintTop_toTopOf="@+id/jobStatus" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/jobStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/str_approval_pending"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_approval"
            app:layout_constraintTop_toBottomOf="@id/jobDescription"
            tools:layout_editor_absoluteX="139dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showDetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#C6C6C6"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:text="@string/str_show_details"
            android:textColor="@color/black"
            android:padding="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/jobStatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/jobStatus" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>